<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="title_play">PLAY</string>
    <string name="title_settings">Settings</string>
    <string name="app_icon" translatable="false">app_icon</string>
    <string name="menuTitle">Menu</string>
    <string name="continueTitle">Continue</string>
    <string name="exitTitle">Exit</string>
    
    <string name="preference_file_key" translatable="false">game</string>

    <string-array name="game_difficulty">
        <item>EASY</item>
        <item>NORMAL</item>
        <item>HARD</item>
    </string-array>
    <string name="dialog_status_win">You win!)</string>
    <string name="dialog_status_lose">You lose(</string>
    <string name="dialog_status_draw">DRAW</string>
    <string name="win_on_vertical_row"> win on vertical row</string>
    <string name="win_on_diagonal"> win on diagonal</string>
    <string name="rules"> Rules</string>
    <string name="volume"> Volume</string>
    <string name="difficulty"> Difficulty</string>
    <string name="win_on_horizontal_row"> win on horizontal row</string>
    <string name="ok">OK</string>
</resources>