<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="212dp"
        android:contentDescription="@string/app_icon"
        app:layout_constraintBottom_toTopOf="@+id/toPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_main" />

    <TextView
        android:id="@+id/toPlay"
        style="@style/style_button"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="61dp"
        android:text="@string/title_play"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/toSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/toSettings"
        style="@style/style_button"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="108dp"
        android:text="@string/title_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>